--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "remove-all": "node src/scripts/removeAllContacts.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Olena Piatkivska <olena.piatkivska@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.2.0",
+    "@faker-js/faker": "^9.0.1",
     "eslint": "^9.2.0",
     "globals": "^15.1.0"
   }
